--- a/camaracomercio/camara/template/master.html
+++ b/camaracomercio/camara/template/master.html
@@ -79,9 +79,6 @@
                         <a class="nav-link" href="{% url 'servicios_publicos' %}">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'notificaciones' %}">Notificaciones</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'historial_reservas' %}">Mis Reservas</a>
                     </li>
 
@@ -94,9 +91,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'historial_reservas' %}">Mis reservas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'notificaciones' %}">Notificaciones</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
@@ -116,56 +110,86 @@
                     </li>
                     {% endif %}
                 </ul>
-
-                <ul class="navbar-nav">
+                <ul class="navbar-nav align-items-center flex-row">
                     {% if user.is_authenticated %}
-                    {% if user.is_superuser or user.is_staff %}
-                    <!-- Menú para admin/superuser -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button"
-                            data-bs-toggle="dropdown">
-                            <i class="fas fa-user-shield me-1"></i>
-                            {% if user.nombre %}
-                            {{ user.nombre }}
-                            {% elif user.first_name %}
-                            {{ user.first_name }}
-                            {% else %}
-                            {{ user.username }}
-                            {% endif %}
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/admin/">Panel Admin</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
+                        {% if user.is_superuser or user.is_staff %}
+                            <!-- Menú para admin/superuser -->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button"
+                                    data-bs-toggle="dropdown">
+                                    <i class="fas fa-user-shield me-1"></i>
+                                    {% if user.nombre %}
+                                        {{ user.nombre }}
+                                    {% elif user.first_name %}
+                                        {{ user.first_name }}
+                                    {% else %}
+                                        {{ user.username }}
+                                    {% endif %}
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/admin/">Panel Admin</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
+                                </ul>
                             </li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
-                        </ul>
-                    </li>
-                    {% else %}
-                    <!-- Menú para usuarios normales -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown">
-                            <i class="fas fa-user me-1"></i>
-                            {% if user.nombre %}
-                            {{ user.nombre }}
-                            {% elif user.first_name %}
-                            {{ user.first_name }}
-                            {% else %}
-                            {{ user.username }}
-                            {% endif %}
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'perfil_usuario' %}">Mi Perfil</a></li>
-                            <li><a class="dropdown-item" href="{% url 'historial_reservas' %}">Mis Reservas</a></li>
-                            <li><a class="dropdown-item" href="{% url 'notificaciones' %}">Notificaciones</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
+                        {% elif user.tipo_usuario == 'empresa' or user.tipo_usuario == 'socio' %}
+                            <li class="nav-item dropdown d-flex align-items-center flex-row">
+                                <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fas fa-user me-1"></i>
+                                    {% if user.nombre %}
+                                        {{ user.nombre }}
+                                    {% elif user.first_name %}
+                                        {{ user.first_name }}
+                                    {% else %}
+                                        {{ user.username }}
+                                    {% endif %}
+                                </a>
+                                <a class="nav-link position-relative ms-2" href="{% url 'notificaciones' %}" title="Notificaciones"
+                                    style="padding-top:0.7rem;padding-bottom:0.7rem;">
+                                    <i class="fas fa-bell"></i>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{% url 'perfil_usuario' %}">Mi Perfil</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'historial_reservas' %}">Mis Reservas</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
+                                </ul>
                             </li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
-                        </ul>
-                    </li>
-                    {% endif %}
+                        {% else %}
+                            <!-- Menú para usuarios normales -->
+                            <li class="nav-item dropdown d-flex align-items-center flex-row">
+                                <div class="d-flex align-items-center">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                        data-bs-toggle="dropdown">
+                                        <i class="fas fa-user me-1"></i>
+                                        {% if user.nombre %}
+                                        {{ user.nombre }}
+                                        {% elif user.first_name %}
+                                        {{ user.first_name }}
+                                        {% else %}
+                                        {{ user.username }}
+                                        {% endif %}
+                                    </a>
+                                    <a class="nav-link position-relative ms-2" href="{% url 'notificaciones' %}" title="Notificaciones"
+                                        style="padding-top:0.7rem;padding-bottom:0.7rem;">
+                                        <i class="fas fa-bell"></i>
+                                    </a>
+                                </div>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="{% url 'perfil_usuario' %}">Mi Perfil</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'historial_reservas' %}">Mis Reservas</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
+                                </ul>
+                            </li>
+                        {% endif %}
                     {% else %}
                     <!-- Menú para visitantes -->
                     <li class="nav-item">
