--- a/camaracomercio/camara/template/vista_publica/login.html
+++ b/camaracomercio/camara/template/vista_publica/login.html
@@ -1,6 +1,14 @@
 {% extends "master.html" %}
 {% load static %}
 {% block title %}Login{% endblock %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<style>
+    body {
+        background: #fff !important;
+    }
+</style>
+{% endblock %}
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center align-items-center" style="min-height: 70vh;">
