--- a/camaracomercio/camara/template/vista_socio_registrado/home.html
+++ b/camaracomercio/camara/template/vista_socio_registrado/home.html
@@ -2,7 +2,16 @@
 {% block title %}Inicio Socio{% endblock %}
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4">Bienvenido, {{ user.first_name|default:user.username }}</h2>
+    <h2 class="mb-4">
+        Bienvenido,
+        {% if user.nombre %}
+            {{ user.nombre }}
+        {% elif user.first_name %}
+            {{ user.first_name }}
+        {% else %}
+            {{ user.username }}
+        {% endif %}
+    </h2>
     {% if user.debe_cambiar_contrasena %}
         <div class="alert alert-warning text-center">
             Es tu primer ingreso. Debes cambiar tu contraseña para continuar.
