--- a/camaracomercio/camara/template/vista_publica/home.html
+++ b/camaracomercio/camara/template/vista_publica/home.html
@@ -90,6 +90,7 @@ Para una integración Django, los enlaces y recursos estáticos deben adaptarse.
       <div id="faqCollapse1" class="accordion-collapse collapse show" aria-labelledby="faq1" data-bs-parent="#faqAccordion">
         <div class="accordion-body">
           <ul>
+            <li>Pago de 20.00$ por Afiliación</li>
             <li>Copia del RUC o RIMPE</li>
             <li>Copia de cédula de identidad</li>
             <li>Formularios de afiliación</li>
